--- a/homepage.html
+++ b/homepage.html
@@ -90,8 +90,9 @@
       <div class="total-price">$0</div>
     </div>
     <!-- Buy Button -->
-    <button class="btn btn-success">Buy Now</button>
-    <i class="bx bx-x" id ="close-cart"></i>
+    <button type="button" id="openModalBtn" class="btn btn-success" data-toggle="modal"
+      data-target="#exampleModal">Checkout</button>
+    <i class="bx bx-x" id="close-cart"></i>
   </div>
   <!-- home content -->
   <section class="home">
@@ -289,6 +290,60 @@
   </div>
   <!-- product cards -->
 
+  <!-- The Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <i class="bx bx-x" id="close-cart"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <h3>Shipping Information</h3>
+            <!-- Input fields for shipping information -->
+            <div class="form-group">
+              <input type="text" class="form-control" id="fullName" placeholder="Full Name">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="address" placeholder="Address">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="city" placeholder="City">
+            </div>
+            <!-- Add more fields as needed -->
+            <h3>Payment Information</h3>
+            <!-- Input fields for payment information -->
+            <div class="form-group">
+              <input type="text" class="form-control" id="cardNumber" placeholder="Card Number">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="expiryDate" placeholder="Expiry Date">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="cvv" placeholder="CVV">
+            </div>
+            <!-- Add more fields as needed -->
+            <h3>Order Summary</h3>
+            <!-- Display order summary here -->
+            <div id="productDetails">
+              
+            </div>
+            <strong><p id="totalCost"></p></strong>
+            
+            <!-- Add more details as needed -->
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button id="confirmOrderBtn" class="btn btn-primary">Confirm Order</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- other cards -->
   <div class="container" id="other-cards">
     <div class="row">
@@ -344,6 +399,7 @@
     </div>
   </div>
   <!-- offer -->
+
 
   <!-- footer -->
   <footer id="footer">
@@ -410,7 +466,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
+  <!-- Thư viện jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <!-- Thư viện Bootstrap JavaScript -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
