--- a/register.html
+++ b/register.html
@@ -82,28 +82,34 @@
             <div class="col-md-7 py-3 py-md-0" id="side2">
                 <h3 class="text-center"><strong>Create Account</strong></h3>
                 <form>
-                    <div class="form-group">
+                    <div class="form-group mb-2">
                         <label for="exampleInputUserName">User Name</label>
                         <input type="text" class="form-control" id="exampleInputUserName" placeholder="Enter username">
+                        <span class="form-message"></span>
                     </div>
-                    <div class="form-group">
+
+                    <div class="form-group mb-2">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                             placeholder="Enter email">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                        <span class="form-message"></span>
                     </div>
-                    <div class="form-group">
+
+                    <div class="form-group mb-2">
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <span class="form-message"></span>
                     </div>
-                    <div class="form-group">
+
+                    <div class="form-group mb-2">
                         <label for="exampleInputConfirmPassword1">Confirm Password</label>
                         <input type="password" class="form-control" id="exampleInputConfirmPassword1"
                             placeholder="Confirm Password">
+                        <span class="form-message"></span>
                     </div>
                 </form>
-                <p class="text-center"><button type="button" class="btn btn-success button">SIGN UP</button>
+                <p class="text-center"><button type="button" id="sign-up" class="btn btn-success button">SIGN
+                        UP</button>
                 <p class="text-center">Forgot Password <a href="#">Click Here</a></p>
                 </p>
             </div>
@@ -175,8 +181,26 @@
 
     <a href="#" class="arrow"><i><img src="./assets/arrow.png" alt="" /></i></a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+
+
+        </script>
+    <script src="./js/register.js"></script>
+    <script>
+        Validator({
+            form: '#register',
+            errorSelector: '.form-message',
+            rules: [
+
+                Validator.isRequired('#exampleInputUserName', 'please enter your name'),
+                Validator.isEmail('#exampleInputEmail1'),
+                Validator.minLength('#exampleInputPassword1', 6),
+                Validator.isConfirmed('#exampleInputConfirmPassword1', function () {
+                    return document.querySelector('#register #exampleInputPassword1').value;
+                }, 'confirmed password does not match')
+            ]
+        });
+    </script>
 </body>
 
 </html>
